Sector 5: Admission and Runtime/kyverno-tests/bad-deployment.yaml

#bad fail before

apiVersion: apps/v1
kind: Deployment
metadata: {name: accounts-api, namespace: accounts}
spec:
  template:
    spec:
      hostNetwork: true
      containers:
        - name: api
          image: 123456789012.dkr.ecr.ap-south-1.amazonaws.com/accounts-api:latest
          securityContext: {privileged: false, allowPrivilegeEscalation: true, runAsNonRoot: false}

---

#test pass after

apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata: {name: accounts-api-baseline}
policies: [../kyverno-policy.yaml]
resources: [bad-deployment.yaml]
results:
  - {policy: accounts-api-baseline, rule: no-host-network, resource: accounts-api, result: fail}
  - {policy: accounts-api-baseline, rule: non-root-no-escalation, resource: accounts-api, result: fail}
  - {policy: accounts-api-baseline, rule: digest-pinned, resource: accounts-api, result: fail}
